partial fix overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,7 +20,6 @@
 @layer base {
   body {
     @apply bg-gray-50 text-gray-900 dark:bg-gray-900 dark:text-gray-100;
-    overflow: hidden;
   }
 
   h1,
